# cloth-simulation-optimisation

./: .gitignore  CMakeLists.txt  auto_profile.py  auto_test.py  cloth_code.cpp  cloth_code_omp.cpp  cloth_code_omp.h  cloth_code_opt.cpp  cloth_code_sse.cpp  cloth_code_sse.h  cloth_code_vect_omp.cpp  cloth_param.h  kernel_main.cpp  kernel_omp.cpp  kernel_opt.cpp  kernel_sse.cpp  kernel_vect_omp.cpp  myprofiler.cpp  myprofiler.h  readme.md  technical_report.typ
report/: template.typ
report/step2/: main_0.csv  main_1.csv  opt_comp_0.csv  opt_comp_1.csv  opt_mem_0.csv  opt_mem_1.csv
report/step3/: sse_0.csv  sse_1.csv  vect_omp_0.csv  vect_omp_1.csv
report/step4/: omp_dynamic.csv  omp_static_1.csv  omp_static_16.csv  omp_static_4.csv  omp_static_64.csv  omp_static_np.csv
report/step5/result/: advisor-roof-settings.json  roofline.html
test_scripts/: step2_main.sh  step2_opt.sh  step2_vect.sh  step3_sse.sh  step3_vect_omp.sh  step3_vectorise.sh  step4_omp.sh  step5_roofline.sh
